[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/sprites/orange_sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://actions/mortality.gd" type="Script" id=3]
[ext_resource path="res://actions/tile_mover.gd" type="Script" id=4]
[ext_resource path="res://actions/attack.gd" type="Script" id=5]
[ext_resource path="res://actors/inventory.gd" type="Script" id=6]
[ext_resource path="res://assets/sprites/orange_blob_shadow.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 5 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="collider_north" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 0, -8 )
collision_mask = 3
collide_with_areas = true

[node name="collider_east" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 8, 0 )
collision_mask = 3
collide_with_areas = true

[node name="collider_south" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 3
collide_with_areas = true

[node name="collider_west" type="RayCast2D" parent="."]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( -8, 0 )
collision_mask = 3
collide_with_areas = true

[node name="Sprite" type="Node2D" parent="."]

[node name="Shadow" type="Sprite" parent="Sprite"]
position = Vector2( 0, -2 )
texture = ExtResource( 7 )

[node name="Body" type="AnimatedSprite" parent="Sprite"]
position = Vector2( 0, -2 )
frames = SubResource( 2 )
animation = "idle"

[node name="Tween" type="Tween" parent="."]

[node name="mortality" type="Node" parent="."]
script = ExtResource( 3 )

[node name="tile_mover" type="Node" parent="."]
script = ExtResource( 4 )

[node name="attack" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="attack"]

[node name="inventory" type="Node" parent="."]
script = ExtResource( 6 )
[connection signal="tween_completed" from="Tween" to="tile_mover" method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="Tween" to="tile_mover" method="_on_Tween_tween_step"]
